feat : 연관된 id 정보 조회 구현 완료
